@@ -1,4 +1,8 @@
 1.4.2:
+* segway: training is now submitted as a segway-task
+* segway: all observations are now written out to temporary storage. As a
+  result, the --observation option has been disabled
+* segway: disabled the erroneous --dinucleotide option
 * segway: Change Segway to raise warning if running Segway in identify mode
   with non-zero verbosity.
 
